# sequoiasql-mysql

./: CMakeLists.txt  README.md  README_dev.md  build.py
cmake/: curl.cmake  curses.cmake  gen_version.cmake  odbc.cmake  ssl.cmake
misc/versiontool/: CMakeLists.txt  sdbVerTool.cpp
package/: cmakecpackage.cmake
package/common/: compatible.sh
package/mariadb/: sdb_sql_ctl  sequoiasql-mariadb-daemon  sequoiasql-mariadb.systemd  sequoiasql-mariadb.sysv  version.info
package/mysql/: sdb_sql_ctl  sequoiasql-mysql-daemon  sequoiasql-mysql.systemd  sequoiasql-mysql.sysv  version.info
sql-src/mariadb-10.4.28/: url.txt
sql-src/mariadb-10.4.6/: url.txt
sql-src/mysql-5.7.25/: url.txt
sql-src/mysql-5.7.32/: url.txt
sql-src/mysql-5.7.34/: url.txt
sql-src/mysql-5.7.39/: url.txt
sql-src/mysql-5.7.40/: url.txt
sql-src/mysql-5.7.42/: url.txt
sql-src/mysql-5.7.44/: url.txt
src/sequoiadb/: CMakeLists.txt
src/sequoiadb/handler/: ha_sdb.cc  ha_sdb_alter.cc  ha_sdb_condition.cc  ha_sdb_conf.cc  ha_sdb_ctx.cc  ha_sdb_errcode.cc  ha_sdb_idx.cc  ha_sdb_item.cc  ha_sdb_part.cc  ha_sdb_seq.cc  ha_sdb_sql.cc  ha_sdb_thd.cc  ha_sdb_util.cc
src/sequoiadb/include/: ha_sdb.h  ha_sdb_condition.h  ha_sdb_conf.h  ha_sdb_ctx.h  ha_sdb_def.h  ha_sdb_errcode.h  ha_sdb_idx.h  ha_sdb_item.h  ha_sdb_log.h  ha_sdb_part.h  ha_sdb_seq.h  ha_sdb_share.h  ha_sdb_sql.h  ha_sdb_thd.h  ha_sdb_util.h  ha_tool_utils.h  i_s_common.h  mapping_context.h  mapping_context_impl.h  name_map.h  sdb_cl.h  sdb_conn.h  sdb_seq.h  server_ha.h  server_ha_def.h  server_ha_query.h  server_ha_recover.h  server_ha_sql_rewrite.h  server_ha_util.h
src/sequoiadb/info_schema/: i_s_common.cc  i_s_sdb_session_attr_current.cc
src/sequoiadb/name_map/: mapping_context_impl.cc  name_map.cc
src/sequoiadb/sdbwrapper/: sdb_cl.cc  sdb_conn.cc  sdb_seq.cc
src/sequoiadb/server_ha/: server_ha.cc  server_ha_query.cc  server_ha_recover.cc  server_ha_sql_rewrite.cc  server_ha_util.cc
src/sequoiadb/tools/: ha_inst_group_chpass.cc  ha_inst_group_clear.cc  ha_inst_group_init.cc  ha_inst_group_list.cc  ha_tool_utils.cc  sql_enable_mapping  sql_get_mapping
src/spark/: CMakeLists.txt
src/spark/handler/: ha_spark.cc  ha_spark_log.cc  ha_spark_sql.cc  ha_spark_vars.cc
src/spark/include/: ha_spark.h  ha_spark_log.h  ha_spark_sql.h  ha_spark_vars.h  spark_conn.h
src/spark/sparkwrapper/: spark_conn.cc
testcase/mariadb-10.4.28/: mysql-test-run.pl
testcase/mariadb-10.4.28/include/: alter_table_mdev539.inc  bytes2.inc  common-tests.inc  count_pushdown_sequoiadb.inc  ctype_8bit.inc  ctype_innodb_like.inc  ctype_pad_all_engines.inc  ctype_thai.inc  ctype_utf8_ilseq.inc  default_charset.inc  default_mysqld.cnf  equal_fields_propagation_datetime.inc  function_defaults.inc  index_merge_2sweeps.inc  innodb_prefix_index_cluster_optimization.inc  partition_mrr.inc  wait_condition.inc
testcase/mariadb-10.4.28/lib/: mtr_cases_from_list.pm
testcase/mariadb-10.4.28/main/: adddate_454.result  alter_add_date_column_sequoiadb.result  alter_overhead_threshold_sequoiadb.result  alter_overhead_threshold_sequoiadb.test  alter_sequoiadb.result  alter_sequoiadb.test  alter_table.result  alter_table.test  alter_table_mdev539_myisam.result  alter_table_online.result  alter_table_trans.test  alter_with_comment_sequoiadb_26410.result  alter_with_comment_sequoiadb_26410.test  auto_increment.result  auto_increment.test  auto_increment_partition_sequoiadb.result  auto_increment_ranges.inc  auto_increment_ranges_innodb.result  auto_increment_ranges_innodb.test  auto_increment_sequoiadb.result  basic_query_sharding_sequoiadb.result  basic_query_sharding_sequoiadb.test  bigint.result  binary.result  binary_to_hex.result  case.result  case.test  cast.result  charset_sequoiadb.result  check.result  check_constraint.result  check_constraint.test  check_constraint_innodb.test  check_constraint_show.result  check_view_protocol.result  check_view_protocol.test  closeTransAndDDL22123.result  comment_column.result  comment_column.test  comment_sequoiadb.result  (+525 more)
testcase/mariadb-10.4.28/std_data/: bug_sql-279.sql
testcase/mariadb-10.4.6/include/: bytes.inc  count_limit_sort_mqb_sequoiadb.inc  count_limit_sort_mqb_sequoiadb_2.inc  count_limit_sort_sqb_sequoiadb.inc  count_pushdown_sequoiadb.inc  ctype_common.inc  ctype_datetime.inc  ctype_filesort.inc  ctype_heap.inc  ctype_like_cond_propagation.inc  ctype_like_cond_propagation_utf8_german.inc  ctype_like_ignorable.inc  ctype_numconv.inc  ctype_unescape.inc  ctype_unicode520.inc  ctype_utf8mb4.inc  ddl_i18n.check_events.inc  ddl_i18n.check_sp.inc  ddl_i18n.check_triggers.inc  default_mysqld.cnf  execution_mode_sequoiadb.inc  explain_direct_sort_sequoiadb_29809.inc  index_merge2.inc  index_merge_2sweeps.inc  index_merge_ror_cpk.inc  limit_offset_pushdown_sequoiadb.inc  logical_operator_pushdown_sequoiadb.inc  min_null_cond.inc  query_cache.inc  query_condition_pushdown_sequoiadb.inc  query_pushdown_condition_sequoiadb_14.inc  query_pushdown_condition_sequoiadb_23.inc  query_pushdown_condition_sequoiadb_5.inc  sequoiadb_version_release_skip.inc  sort_pushdown_sequoiadb.inc  type_hrtime.inc
testcase/mariadb-10.4.6/lib/: mtr_report.pm
testcase/mariadb-10.4.6/main/: adddate_454.test  alter_add_date_column_sequoiadb.result  alter_add_date_column_sequoiadb.test  alter_overhead_threshold_sequoiadb.result  alter_sequoiadb.result  alter_sequoiadb.test  alter_table.result  alter_table.test  alter_table_autoinc-5574.result  alter_table_autoinc-5574.test  alter_table_mdev539_myisam.result  bigint.result  (+836 more)
testcase/mysql-5.7.25/: README  mysql-test-run.pl  valgrind.supp
testcase/mysql-5.7.32/: mysql-test-run.pl
testcase/mysql-5.7.34/: out
testcase/mysql-5.7.39/: mysql-test-run.pl
testcase/mysql-5.7.44/: CMakeLists.txt
testcase/testcase-base/: pom.xml
testcase/tools/: README.txt
tools/: sdb_doc_generator.py
tools/diagnostic/: sdb_diag_info_dump
tools/lib/: README.md
tools/metaSync/: config.sample  keywords.py  log.config.sample  meta_sync.py
tools/sdbfk/: README.md  sdb_fk_init.sh  sdb_fk_notify.sh
(+2724 files in other folders)
